# merely-players

./: .gitignore  Dockerfile  build.py  docker-compose.yaml  dockerfile-cic  dockerfile-merely-players  install.py  merely-players.dockerfile  prep.py  project-merely-players-log.md  pyproject.toml  readme.md  start.py
cic/: app.py  cli.py  utils.py
cic/apis/: __init__.py  cic.py  galaxy.py  robots.py
cic/robot/: brain.py  galaxy.py  robot.py  runner.py
cic/static/css/: style.css
cic/static/js/: galaxy.js  index.js  robots.js  test.js
cic/templates/: _test.html  cic.html
data/: galaxy.json
docker/: prep-sudo.py  prep.py  prep_galaxy.py  prep_merely_players.py  readme.md
docs/: api.md  dev-mode.md  docker.md
log/: galaxy.json
merely_players/: api.py  app.py  brain.py  cli.py  galaxy.py  main.py  planets.py  start-some-robots.sh  utils.py
merely_players/apis/: __init__.py  galaxy.py  namespace1.py  namespace2.py
merely_players/robot/: brain.py  galaxy.py  robot.py
msc/: doco.py  readme.md  robo.py  robo.sh
