[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "merely_players"
version = "1.0"
readme = "readme.md"
requires-python = ">=3.9"
dependencies = ["pexpect==4.9.0", "sshkeyboard==2.3.1"]

[project.optional-dependencies]
fastapi = ["fastapi[standard]==0.121.0"]

[tool.setuptools]
packages = ["merely_players"]
